syntax = "proto2";

package protobuf;

service ResourceManager {
    rpc Send (stream TFromAgentMessage) returns (stream TToAgentMessage) {}
}

message TTask {
    required string id = 1;
    required bytes execution_shell_command = 2;
    optional bytes requirements_shell_command = 3;
}

message THardwareData {
    required int32 cores_count = 1;
    required uint64 memory_amount = 2;
    required uint64 disk_amount = 3;
}


message TGreetings {
    required string token = 1;
}

message THardwareRequest {
}

message TTaskRequest {
    required TTask task = 1;
}

message TTaskResponse {
    required string task_id = 1;
    required TResult result = 2;
}

message TToAgentMessage {
    oneof Body {
        THardwareRequest hardware_request = 1;
        TTaskRequest task_request = 2;
    }
}

message TFromAgentMessage {
    oneof Body {
        THardwareData hardware_data = 1;
        TGreetings greetings = 2;
        TTaskResponse task_response = 3;
    }
}
message TResult {
    enum TResultCode {
        NONE = 0;
        WAIT = 1;
        RUN = 2;
        FAILED = 3;
        SUCCESS = 4;
    }

    enum TErrorCode {
        UNKNOWN = 0;
        INTERNAL = 1;
        INVALID_ARGUMENT = 2;
        UNAUTHENTICATED = 3;
        UNAUTHORIZED = 4;
    }

    required TResultCode result_code = 1;
    optional TErrorCode error_code = 2;
}